# Tecnalia_Solar-Energy-Model

./: .env-database  .gitignore  Dockerfile  LICENSE  README.md  VERSION  docker-compose.yaml  pyproject.toml  script_build.sh  script_run.sh  solar_power_plants.py
.github/workflows/: ci.yml
Building Energy Simulation Model/: .coverage  README.md  building_energy_process.py  pyproject.toml
Building Energy Simulation Model/database/: 06-DemandNinja_Radiation_DB.csv  07-DemandNinja_Temperature_DB.csv
Building Energy Simulation Model/modules/: model.py  validator.py
Building Energy Simulation Model/tests/: test_01_command_line.py  test_02_payload.py  test_03_execution.py
Building Energy Simulation Model/usecases/: ES21.csv
PV Power Plants Model/: .coverage  README.md  pv_power_plants.py  pyproject.toml
PV Power Plants Model/modules/: model.py  validator.py
PV Power Plants Model/tests/: test_01_command_line.py  test_03_execution.py
PV Power Plants Model/usecases/: ES41_BAK.csv
api/: __init__.py  api.py  requirements.txt
api/config/: config.ini  config_pv.json
api/modules/: database.py  io.py  logging_config.py  qgis.py  qgis_bp_preprocess.py  qgis_bp_process.py  qgis_pv_preprocess.py  qgis_pv_process.py  rest.py  sftp.py
api/properties/: api.properties
api/schemas/: json_schemas.py
api/tests/: __init__.py  test_01_api_hello.py  test_01_hello.py  test_02_api_authenticate.py  test_02_authenticate.py  test_03_api_pv_power_plants.py  test_03_pv_power_plants.py  test_04_api_building_energy_simulation.py  test_04_building_energy_simulation.py
backend/database/: Dockerfile
backend/sftp/: Dockerfile  entrypoint.sh  sshd_config
backend/ui/: .classpath  .project  Dockerfile  init.sh  pom.xml
certification/: README.md  Step1__Building_Stock_Energy_Simulation_Model__Input01.json  Step1__Building_Stock_Energy_Simulation_Model__Input02.txt  Step1__Solar_Energy_Model__Input02.json  Step1__Solar_Energy_Model__Result01.rar  Step1__Solar_Energy_Model__Result02.rar  Step2__Versioning and compatibility.rar
docs/: .buildinfo  README.md  api_reference.html  example.html  genindex.html  getting_started.html  index.html  methodological_description.html  modules.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: api_reference.doctree  environment.pickle  example.doctree  getting_started.doctree  index.doctree  methodological_description.doctree  modules.doctree  overview.doctree
docs/_modules/: index.html  solar_power_plants.html
docs/_sources/: index.rst.txt  methodological_description.rst.txt  modules.rst.txt
example/: README.md
examples/: README.md  README.md.backup  building_energy_simulation.py  pv_power_plants.py
examples/building_energy_process/: README.md  building_energy_process.py  pyproject.toml
examples/building_energy_process/tests/: test_process.py
examples/config/: config.ini
examples/headers/: bes_headers.json
examples/pv_power_plants/: README.md  auth.json  pv_power_plants.py  pyproject.toml
examples/pv_power_plants/tests/: test_process.py
frontend/: .gitignore  Dockerfile
modules/: model.py
qgis/: script_build_qgis.sh  script_run_api.sh  script_run_qgis.sh
solar_energy_model/: constants.py  model.py  validator.py
tests/: test_01_command_line.py  test_02_payload.py  test_03_execution.py
(+145 files in other folders)
