[tool.poetry]
name = "building_energy_process"
version = "0.9.1"
description = "Building Energy Simulation process client"
authors = ["Alberto Molinuevo Martin <alberto.molinuevo@tecnalia.com>"]
license = "GPLv2"
readme = "README.md"

# Packages
packages = [{ include = "modules" }]

# Includes
include = ["database/*.csv", "database/*.xlsx", "temporary/*.csv"]

# Dependencies
[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
numpy = "^2.2"
openpyxl = "^3.1.3"
pvlib = "^0.10.4"
pyproj = "^3.2.1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"

