[tool.poetry]
name = "building_energy_process"
version = "0.8.5"
description = "Building Energy Simulation process client"
authors = ["Alberto Molinuevo Martin <alberto.molinuevo@tecnalia.com>"]
license = "GPLv2"
readme = "README.md"

# Dependencies
[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"
numpy = "^1.21.6"
requests = "^2.31.0"