[tool.poetry]
name = "pv_power_plants"
version = "0.8.5"
description = "PV Power Plants process client"
authors = ["Alberto Molinuevo Martin <alberto.molinuevo@tecnalia.com>"]
license = "GPLv2"
readme = "README.md"

# Dependencies
[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
numpy = "^2.2"
requests = "^2.31.0"